# pluggy_plugin_learning

./: .gitignore  README.md
bootstrap/: pyproject.toml
bootstrap/bootstrap/: app.py
first/: pyproject.toml
first/first/plugina/: __init__.py
second/: pyproject.toml
second/second/pluginb/: __init__.py
sharespec/: pyproject.toml
sharespec/sharespec/: __init__.py
